# agh-stochastic-ml

./: notebook.ipynb  pyproject.toml
lab1_new/: instructions.ipynb
lab3/: instructions.ipynb
lab4/: instructions.ipynb
